--- a/therapist.html
+++ b/therapist.html
@@ -211,7 +211,7 @@
 
         <!-- Mr. Haha Section -->
         <div class="therapist-section haha-section">
-            <img src="image/haha.png" alt="Mr. Haha" class="therapist-avatar">
+            <img src="image/HAHA.png" alt="Mr. Haha" class="therapist-avatar">
             <div class="therapist-info">
                 <h2>Mr. Haha - Hedgehog of the Cave 🦔🪄</h2>
                 <p>"Hello! I'm Mr. Haha, your cave humor therapist, and I've got jokes that can make even stones laugh!"</p>
