--- a/therapist.html
+++ b/therapist.html
@@ -235,7 +235,7 @@
 
         <!-- Doctor Woow Section -->
         <div class="therapist-section woow-section">
-            <img src="image/woow.png" alt="Doctor Woow" class="therapist-avatar">
+            <img src="image/WOOW.png" alt="Doctor Woow" class="therapist-avatar">
             <div class="therapist-info">
                 <h2>Doctor Woow - Rainy Day Owl Wise Guy 🦉🌧️</h2>
                 <p>"Hoot! I'm Doctor Woow, your rainy day wisdom guide, and I've got more wisdom than a wet owl!"</p>
