--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
                 <img src="image/home-banner-forest.png" alt="Forest Scene">
             </div>
             <div class="carousel-slide">
-                <img src="image/home-banner-ocean.JPG" alt="Ocean Scene">
+                <img src="image/home-banner-ocean.jpg" alt="Ocean Scene">
             </div>
             <div class="carousel-slide">
-                <img src="image/home-banner-cave.JPG" alt="Cave Scene">
+                <img src="image/home-banner-cave.jpg" alt="Cave Scene">
             </div>
             <div class="carousel-slide">
-                <img src="image/home-banner-rainday.JPG" alt="Rainy Day Scene">
+                <img src="image/home-banner-rainday.jpg" alt="Rainy Day Scene">
             </div>
         </div>
     </section>
